[package]
name = "rtxtool"
version = "0.1.0"
edition = "2021"
# https://cxx.rs/build/cargo.html#publicly-exporting-header-directories
links = "rtxtool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
