[package]
name = "rtxtool"
version = "0.1.0"
edition = "2021"
# https://cxx.rs/build/cargo.html#publicly-exporting-header-directories
links = "rtxtool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
gtk = { version = "0.6", package = "gtk4", features = ["v4_10", "blueprint"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }

[dependencies.adw]
package = "libadwaita"
version = "0.4"
features = ["v1_3"]

[build-dependencies]
cxx-build = "1.0"
